# script

c/: README  a.out  char.c  exec.c  forc_new  fork  fork_test.c  fork_test_new.c  getchar  getchar.c  he.cpp  point.c
cpp/: hellospeak.cpp  mysql.cpp  mysqls  socket_server.cpp  speak.cpp  speak.h  str.cpp
cpp/c_make/c1/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
cpp/c_make/c2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
cpp/class/: stu  stu.cpp
cpp/cm_demo/cmlib/: IDAllocator.h  IDAllocatorManager.cpp  IDAllocatorManager.h  StepIDAllocator.cpp  StepIDAllocator.h
cpp/conf/src/: CMakeLists.txt  binlog-hunter.cpp  cache.cpp  cache_key.cpp  conf.cpp
cpp/conf/src/conf/: binlog-hunter.conf  brd_shop.conf
cpp/data_struct/: README.md
cpp/file/: a.out  fstream.cpp  student.cpp  students.txt  substr.cpp
cpp/gdb/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test  test.cpp
cpp/glog/: gl.cpp
cpp/libmemcached/: libmem.cpp
cpp/map/: demo  demo.cpp
cpp/memory/: memory2  memory2.c
cpp/mysql/: Makefile1  MyDB.cpp  MyDB.h  m_include.h  main.cpp  myapp
cpp/mysql_demo/: demo  demo.c  demo.h
cpp/socket/: client1  client1.c  client2  client2.c  server1  server1.c  server2  server2.c  str  str.c
cpp/string/: vec  vec.cpp
cpp/struct/: init.cpp  strucur.cpp
cpp/template/: test1.cpp  test2.cpp
go/: curl.go
php/: arrayObject.php  bind.php  closure.php  closure_test.php  consisten_hash.php  iterator.php  iteratorAggregate.php  stack.php
tool/: mortgage.php  mysql_client.cpp
(+50 files in other folders)
